log
Fri 14 Oct 2022 10:13:21 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:10: error: unused variable ‘new’ [-Werror=unused-variable]
   36 |   Heap * new = (Heap *)malloc(sizeof(Heap));
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
21349b2
Fri 14 Oct 2022 10:14:40 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:7: error: ‘capac’ undeclared (first use in this function)
   39 |   new-capac=3;
      |       ^~~~~
heap.c:39:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1c5e72f
Fri 14 Oct 2022 10:14:49 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4504804
Fri 14 Oct 2022 10:16:35 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
24fbd6f
Fri 14 Oct 2022 10:28:13 PM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:5: error: ‘capac’ undeclared (first use in this function)
   30 |     capac = capac *2 +1;
      |     ^~~~~
heap.c:30:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:31:5: error: ‘heapArray’ undeclared (first use in this function)
   31 |     heapArray = realloc (capac*heapElem);
      |     ^~~~~~~~~
heap.c:31:32: error: expected expression before ‘heapElem’
   31 |     heapArray = realloc (capac*heapElem);
      |                                ^~~~~~~~
heap.c:31:17: error: too few arguments to function ‘realloc’
   31 |     heapArray = realloc (capac*heapElem);
      |                 ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
In file included from test.c:4:
heap.c:37:20: error: expected ‘;’ before ‘}’ token
   37 |     now = (now-1)/2
      |                    ^
      |                    ;
   38 |   }
      |   ~                 
heap.c:41:3: error: ‘size’ undeclared (first use in this function)
   41 |   size++;
      |   ^~~~
Compilation failed
9d34e1a
Fri 14 Oct 2022 10:51:28 PM UTC: 
 heap.c | 47 +++++++++++++++++++++++++++++++++++++----------
 1 file changed, 37 insertions(+), 10 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:48:4: error: implicit declaration of function ‘swap’ [-Werror=implicit-function-declaration]
   48 |    swap(pq, pos);
      |    ^~~~
heap.c:52:10: error: ‘aux’ undeclared (first use in this function)
   52 |          aux->data = pq->heapArray[(pos-1)/2].data;
      |          ^~~
heap.c:52:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c: At top level:
heap.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
heap.c: In function ‘heap_pop’:
heap.c:70:3: error: ‘size’ undeclared (first use in this function)
   70 |   size--;
      |   ^~~~
heap.c:71:3: error: ‘array’ undeclared (first use in this function)
   71 |   array[0] = array[pq->size];
      |   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f17ff99
Fri 14 Oct 2022 10:51:45 PM UTC: 
 heap.c | 34 ----------------------------------
 1 file changed, 34 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:36:3: error: ‘size’ undeclared (first use in this function)
   36 |   size--;
      |   ^~~~
heap.c:36:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:37:3: error: ‘array’ undeclared (first use in this function)
   37 |   array[0] = array[pq->size];
      |   ^~~~~
Compilation failed
d2a5a22
Sun 16 Oct 2022 04:53:59 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:9: error: assignment to ‘Heap *’ {aka ‘struct Heap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   if(pq = NULL || pq->heapArray == NULL){
      |         ^
heap.c:21:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   21 |   if(pq = NULL || pq->heapArray == NULL){
      |      ^~
heap.c:23:3: error: expected ‘;’ before ‘}’ token
   23 |   }
      |   ^
heap.c:24:14: error: expected ‘)’ before ‘!’ token
   24 |   if(pq->size ! =0){
      |     ~        ^~
      |              )
heap.c: In function ‘heap_pop’:
heap.c:41:3: error: ‘size’ undeclared (first use in this function)
   41 |   size--;
      |   ^~~~
heap.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
heap.c:42:3: error: ‘array’ undeclared (first use in this function)
   42 |   array[0] = array[pq->size];
      |   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
dd691ae
